// Copyright 2013-2016 Jason Leyba
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "descriptor.proto";

option java_package = "com.github.jsdossier.proto";
option java_multiple_files = true;

package dossier.options;

message SanitizedContent {
  oneof kind {
    // Indicates a field should be treated as a sanitized URI when
    // injected into a Soy template.
    bool uri = 1;

    // Indicates a field should be treated as sanitized HTML content when
    // injected into a Soy template.
    bool html = 2;
  }
}

extend google.protobuf.FieldOptions {
  SanitizedContent sanitized = 51230;
}
